<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="1"
        style="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/itemImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="image"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="50dp"
        android:text="TextView"
        android:layout_marginTop="10dp"
        style="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImg"
        />
    <RatingBar
        android:id="@+id/itemRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        />
    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:text="Price/month"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemRating"/>


    <RadioGroup
        android:id="@+id/itemRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice">


        <RadioButton
            android:id="@+id/rbAcoustic"
            style="@style/RadioStyle"
            android:text="Acoustic" />

        <RadioButton
            android:id="@+id/rbElectric"
            style="@style/RadioStyle"
            android:text="Electric" />

        <RadioButton
            android:id="@+id/rbBass"
            style="@style/RadioStyle"
            android:text="Bass" />
    </RadioGroup>
    <TextView
        android:id="@+id/itemBorrowed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Borrowed for X months"
        android:textSize="16dp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice"/>
    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnPrevious"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Back"
            android:layout_margin="10dp"
             />
        <Button
            android:id="@+id/btnBorrow"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="Borrow"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btnNext"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Next"
            android:layout_margin="10dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>