<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="1"
        style="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/detailItemImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="image"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailItemName"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Item Name"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemImg" />
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemName">

        <TextView
            android:id="@+id/detailItemRate"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rate"
            android:textSize="18dp"
            />
    <TextView
        android:id="@+id/detailItemAttribute"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attr"
        android:textSize="18dp"
         />
    <TextView
        android:id="@+id/detailItemType"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="type"
        android:textSize="18dp"
         />
    <TextView
        android:id="@+id/detailItemModel"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="model"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <TextView
        android:id="@+id/detailItemColor"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="color"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <TextView
        android:id="@+id/detailItemCondition"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="condition"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
         />
    </LinearLayout>

    <TextView
        android:id="@+id/detailItemPrice"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price: $00.00"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <com.google.android.material.slider.Slider
        android:id="@+id/borrowMonthsSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:value="1"
        android:valueFrom="0"
        android:valueTo="6"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemPrice" />

    <TextView
        android:id="@+id/borrowMonthsText"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="1 month"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borrowMonthsSlider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    <Button
        android:id="@+id/cancelBtn"
        style="@style/ButtonStyle"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="Cancel"
        android:layout_margin="10dp"
         />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <Button
        android:id="@+id/saveBtn"
        style="@style/ButtonStyle"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="Save"
        android:layout_margin="10dp"
         />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>